corrected overflow on CSS

--- a/css/webclient.css
+++ b/css/webclient.css
@@ -7,7 +7,7 @@ body {
 	margin: 0;
 	padding: 0;
 	position: absolute;
-	#overflow:hidden;
+	overflow:hidden;
 	width: 100%;
 	height: 100%;
 }
